fix: page got stuck when logs size too large

--- a/src/global.less
+++ b/src/global.less
@@ -517,7 +517,7 @@ body {
 
 .ant-modal-centered.ant-modal-wrap {
   &::-webkit-scrollbar {
-    width: var(--scrollbar-size);
+    width: 0;
   }
 
   &::-webkit-scrollbar-thumb {
